[package]
name = "vidmod-plugins-cvbs"
version = "0.1.0"
edition = "2018"
rust-version = "1.49"
description = "Vidmod plugins for manipulating CVBS streams"
repository = "https://github.com/vidmod/vidmod-plugins-cvbs"
license = "MIT"

[dependencies]
ndarray = "0.15.4"
vidmod-node = { version = "0.1.0", path = "../../vidmod-node" }
vidmod-macros = { version = "0.1.0", path = "../../vidmod-macros" }
anyhow = "1.0.55"
